Fixing spacing and sizing for Preview page

--- a/src/containers/News/index.css
+++ b/src/containers/News/index.css
@@ -1,6 +1,6 @@
 .postPreview .postLink {
-    border: none;
     font-size: .9em;
+    border: none;
 } 
 
 .postPreview .postTitle {
@@ -11,23 +11,19 @@
 .postPreview figure {
     max-width: 6em;
     max-height: 6em;
-    display: inline-block;
+    float: left;
     object-fit: scale-down;
-    margin-block-start: 0vh;
-    margin-block-end: 0vh;
-    margin-inline-start: 0vh;
-    margin-inline-end: 0vh;
+    margin: 0;    
+    margin-right: 1vh;
 }
 
 .postPreview img {
-    max-width: 6em;
-    max-height: 6em;
-    display: inline-block;
+    float: left;
     object-fit: scale-down;
-    margin-block-start: 0vh;
-    margin-block-end: 0vh;
-    margin-inline-start: 0vh;
-    margin-inline-end: 0vh;
+    max-height: 6em;
+    max-width: 6em;
+    margin-right: 1vh;
+    margin-top: 1vh;
 }
 
 
@@ -36,10 +32,10 @@
     word-wrap: break-word;
     text-align:left;
     width: 80%;
-    margin: 0;
-    margin-left: .5em;
-    font-size: .9em;
     padding-top: 1vh;
+    float: top;
+    font-size: .9em;
+    margin: 0;
 }
 
 .previewHTML p:nth-of-type(1n+2) {
@@ -56,7 +52,6 @@
     overflow: hidden;
     width: 100%;
     height: 6em;
-    padding-top: 1vh;
     border-top: solid #ffcebe;
 }
 
@@ -69,7 +64,7 @@
     hyphens: auto;
     overflow: hidden;
     width: auto;
-    height: 20vh;
+    height: 25vh;
 }
 
 #newsPreview {
@@ -130,6 +125,14 @@
     max-width: 100%;
 }
 
+br + p {
+    margin-top: 0;
+}
+
+br {
+    display: none;
+}
+
 @media only screen and (max-width: 767px) {
     .content {
         padding: 1.5vh;
@@ -169,13 +172,6 @@
         vertical-align: top;
     }
 
-    br + p {
-        margin-top: 0;
-    }
-    
-    br {
-        display: none;
-    }
     .postTitle {
         width: 100%;
         font-size: 1.5em;
